--- a/src/WebApplication3/wwwroot/views/products/product-list.component.html
+++ b/src/WebApplication3/wwwroot/views/products/product-list.component.html
@@ -6,12 +6,12 @@
         <div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
-                <input type="text" />
+                <input type="text" [(ngModel)]="listFilter" />
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h3>Filtered by:</h3>
+                <h3>Filtered by: {{listFilter}}</h3>
             </div>
         </div>
         <div class="table-responsive">
@@ -19,8 +19,8 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary">
-                                Show image
+                            <button class="btn btn-primary" (click)='toggleImage()'>
+                                {{showImage ? 'Hide image' : 'Show image'}}
                             </button>
                         </th>
                         <th>Product</th>
@@ -32,11 +32,15 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="#product of products">
-                        <td></td>
-                        <td>{{product.productName}}</td>
+                        <td><img *ngIf="showImage" 
+                                 [src]="product.imageUrl" 
+                                 [title]="product.productName | uppercase"
+                                 [style.width.px]="imageWidth"
+                                 [style.margin.px]="imageMargin" /></td>
+                        <td>{{product.productName | uppercase}}</td>
                         <td>{{product.productCode}}</td>
                         <td>{{product.releaseDate}}</td>
-                        <td>{{product.price}}</td>
+                        <td>{{product.price | currency:'USD':false:'1.2-2'}}</td>
                         <td>{{product.starRating}}</td>
                     </tr>
                 </tbody>
