--- a/src/WebApplication3/wwwroot/views/products/product-list.component.html
+++ b/src/WebApplication3/wwwroot/views/products/product-list.component.html
@@ -41,7 +41,10 @@
                         <td>{{product.productCode}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:'USD':false:'1.2-2'}}</td>
-                        <td>{{product.starRating}}</td>
+                        <td>
+                            <ai-star [rating]="product.starRating"
+                                     (ratingClicked)="onRatingClicked($event)"></ai-star>
+                        </td>
                     </tr>
                 </tbody>
             </table>
