--- a/src/WebApplication3/wwwroot/views/app.component.html
+++ b/src/WebApplication3/wwwroot/views/app.component.html
@@ -1,3 +1,3 @@
-﻿<div>
-    <h1>{{pageTitle}}</h1>
+﻿<div style="padding: 40px;">
+    <canvas id="myCanvas" width="600" height="400"></canvas>
 </div>
