--- a/src/WebApplication3/wwwroot/views/app.component.html
+++ b/src/WebApplication3/wwwroot/views/app.component.html
@@ -1,3 +1,7 @@
 ﻿<div style="padding: 40px;">
     <canvas id="myCanvas" width="600" height="400"></canvas>
 </div>
+<div>
+    <button id="btnToggle" (click)="toggleDrawing()">Start / Stop</button>
+    <button id="btnReset" (click)="reset()">Reset</button>
+</div>
