--- a/src/WebApplication3/wwwroot/views/app.component.html
+++ b/src/WebApplication3/wwwroot/views/app.component.html
@@ -1,5 +1,5 @@
 ﻿<div style="padding: 40px;">
-    <canvas id="myCanvas" width="1200" height="600"></canvas>
+    <canvas id="myCanvas" width="1200" height="600" style="border:1px solid #ddd"></canvas>
 </div>
 <div>
     <button id="btnToggle" (click)="toggleDrawing()">Start / Stop</button>
