--- a/src/WebApplication3/wwwroot/views/app.component.html
+++ b/src/WebApplication3/wwwroot/views/app.component.html
@@ -1,10 +1,9 @@
 ﻿<div style="padding: 40px;">
     <canvas id="myCanvas" width="512" height="512" style="border:1px solid #ddd">TEST</canvas>
     <div style="width: 512px">
-        <div>Zoom: <input type="range" id="inZoom" min="1" max="50" step="1" [ngModel]="zoom" (ngModelChange)="changeZoom($event)" /></div>
-        <div>Resolution: <input type="range" id="inResolution" min="1" max="50" step="1" [ngModel]="renderResolution" (ngModelChange)="changeResolution($event)" /></div>
-        <div>Speed: <input type="range" id="inSpeed" min="1" max="50" step="1" [ngModel]="speed" (ngModelChange)="changeSpeed($event)" /></div>
-        <button id="btnToggle" (click)="toggleDrawing()">Start / Stop</button>
+        <div>Wind: <input type="range" id="inWind" min="-0.1" max="0.1" step="0.01" [ngModel]="wind.x" (ngModelChange)="changeWind($event)" /></div>
+        <div>Ball restitution: <input type="range" id="inRestitution" min="0" max="1" step="0.01" [ngModel]="restitution" (ngModelChange)="changeRestitution($event)" /></div>
         <button id="btnReset" (click)="reset(true)">Reset</button>
+        <button id="btnToggleWater" (click)="toggleWater()">Toggle water</button>
     </div>
 </div>
